# ShadowPyExpect

./: .gitignore  CMakeLists.txt  README.md  main.py  project_structure.txt
ExampleFiles/: generated_observables.txt  scheme.txt  shadow.txt
TestFiles/: exec.txt  expectationTest.txt  measureTest.txt  measureTestCIRC.txt  measureTestDM.txt  obsTest.txt  schemeTest.txt  shadowExpectationTest.txt
src/cpp/: expectation_shadow_binding.cpp  fake_sampler_binding.cpp  measure_scheme_generator_binding.cpp
src/python/: FakeSampler.py  GenerateFakeMeasurement.py  Properties_Abstract.py  Z2Model.py  abstract_properties.py  class_cpp2python.py  cpp_to_python_interface.py  fake_sampler.py  generate_observables.py  observables_generator.py  z2_model.py
src/python/archive/: GenerateFakeMeasurement.py
